--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@astrojs/rss": "^4.0.6",
     "@astrojs/tailwind": "^5.1.0",
     "astro": "^4.10.3",
+    "astro-i18next": "^1.0.0-beta.21",
     "preact": "^10.22.0",
     "tailwindcss": "^3.4.4"
   }
